improved the UI

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -3,33 +3,80 @@ body, html {
     font-family: sans-serif;
 }
 
+.heading {
+    background-color: #106150;
+    color: white;
+    height: 50px;
+    margin: 0px;
+    position: relative;
+    top: -21px;
+    padding: 15px 0;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+
+}
+
 .content {
     margin: 0 auto;
     width: 400px;
 }
 
-table, td, th {
-    border: 1px solid #aaa;
+table th:first-child{
+  border-radius:25px 0 0 0;
+}
+
+table th:last-child{
+  border-radius:0 25px 0 0;
 }
 
 table {
     border-collapse: collapse;
-    width: 100%;
+    margin: 15px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+    border-radius: 25px;
 }
 
-th {
-    height: 30px;
+thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+    border-radius: 25px;
 }
 
-td {
-    text-align: center;
-    padding: 5px;
+th, td {
+    padding: 12px 15px;
 }
+
+tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
 
 .form {
     margin-top: 20px;
 }
 
 #content {
-    width: 70%;
+    width: 75%;
+    margin-left: 10px;
+    border: 1px solid #bfbfbf;
+    height: 20px;
+    border-radius: 4px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+}
+
+#add-button {
+    background-color: #009879;
+    color: white;
+    padding: 5px 5px;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
 }
